# metaproxy

./: .cvsignore  .dockerignore  .gitignore  .travis.yml  Dockerfile  Doxyfile.in  IDMETA  LICENSE  Makefile.am  NEWS  README  README.md  buildconf.sh  configure.ac  configure.in  metaproxy-config.in  metaproxy.pc.in  metaproxy.spec  usemarcon.m4  yazpp.m4
.github/workflows/: build-metaproxy.yaml  docker.yml  helm.yml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: deployment.yaml  service.yaml
debian/: .gitignore  changelog  control  copyright  libmetaproxy.install  libmetaproxy2-dev.install  libmetaproxy3-dev.install  libmetaproxy4.dirs  libmetaproxy5-dev.install  libmetaproxy5.dirs  libmetaproxy6-dev.install  libmetaproxy6.dirs  metaproxy-doc.install  metaproxy.default  metaproxy.dirs  metaproxy.init  metaproxy.install  metaproxy.logrotate  metaproxy.postinst  metaproxy.postrm  metaproxy.prerm  metaproxy.service  metaproxy.xml  not-installed  rules
doc/: .cvsignore  .gitignore  Makefile.am  README  auth_simple.xml  backend_test.xml  book.xml  bounce.xml  cgi.xml  classes  config  copyright.xml  cql_rpn.xml  filters  frontend_net.xml  html.dsl.in  http_client.xml  http_file.xml  http_rewrite.xml  limit.xml  load_balance.xml  local.ent.in  log.xml  main.xml.in  metaproxy-config.xml  metaproxy.xml  metaproxy.xml.in  multi.xml  multidb  present_chunk.xml  print.dsl.in  query_rewrite.xml  record_transform.xml  ref2dbinc.xsl  sd_remove.xml  session_shared.xml  sort.xml  sru_z3950.xml  template.xml  to-be-integrated  (+8 more)
etc/: .cvsignore  Makefile  Makefile.am  cgi.sh  config-bytarget.xml  config-cgi.xml  config-imagine.xml  config-load-balance.xml  config-loc.xml  config-local.xml  config-proxy-with-loggging.xml  config-proxy.xml  config-record-transform.xml  config-rewrite.xml  config-shared1.xml  config-simple-multi.xml  config-solr.xml  config-sru-holdings.xml  config-sru-to-z3950.xml  config-torus.xml  config-zoom.xml  config-zurg.xml  config.debian.xml  config.xsd  config0.xml  config1.xml  config2.xml  config3.xml  config4.xml  config5.xml  cql2pqf.txt  example.simple-auth  example.target-auth  experiment-query-config-translate.php  explain.xml  jstor-pz2.xsl  pqf2pqf-loc.xsl  queryinfo.xml  retrieval-info.xml  retrievalinfo.xml  (+2 more)
example-module/: Makefile  README  config.xml  filter_myfilter.cpp  mytest.cpp
include/: Makefile.am
include/metaproxy/: Makefile.am  filter.hpp  origin.hpp  package.hpp  router.hpp  router_chain.hpp  router_xml.hpp  session.hpp  util.hpp  xmlutil.hpp
rpm/: metaproxy.init  metaproxy.logrotate  metaproxy.service  metaproxy.sysconfig  metaproxy.xml
src/: .cvsignore  .gitignore  Jamfile.in  Makefile.am  design.h  design_main.cpp  ex_filter_frontend_net.cpp  ex_libxml2_conf.cpp  ex_router_flexml.cpp  factory_filter.cpp  factory_filter.hpp  factory_static.cpp  factory_static.hpp  filter.cpp  filter.hpp  filter_auth_simple.cpp  filter_auth_simple.hpp  filter_backend_test.cpp  filter_backend_test.hpp  filter_bounce.cpp  filter_bounce.hpp  filter_cgi.cpp  filter_cgi.hpp  filter_cql_rpn.cpp  filter_cql_rpn.hpp  filter_cql_to_rpn.cpp  filter_cql_to_rpn.hpp  filter_dl.cpp  filter_factory.cpp  filter_factory.hpp  filter_frontend_net.cpp  filter_frontend_net.hpp  filter_http_client.cpp  filter_http_client.hpp  filter_http_file.cpp  filter_http_file.hpp  filter_http_rewrite.cpp  filter_http_rewrite.hpp  filter_http_rewrite1.cpp  filter_http_rewrite1.hpp  (+110 more)
win/: .gitignore  makefile
xml/: Makefile.am
xml/experiments/: config-imagine.xml  zeerex-info.xml
xml/schema/: .cvsignore  .gitignore  MARC21slim.xsd  Makefile.am  filter_auth_simple.rnc  filter_auth_simple.rng  filter_auth_simple.xsd  filter_backend_test.rnc  filter_backend_test.rng  filter_backend_test.xsd  filter_bounce.rnc  filter_bounce.rng  filter_bounce.xsd  filter_cgi.rnc  filter_cgi.rng  filter_cgi.xsd  filter_cql_rpn.rnc  filter_cql_rpn.rng  filter_cql_rpn.xsd  filter_frontend_net.rnc  filter_frontend_net.rng  filter_frontend_net.xsd  filter_http_client.rnc  filter_http_file.rnc  filter_http_file.rng  filter_http_file.xsd  filter_http_rewrite.rnc  filter_http_rewrite1.rnc  filter_limit.rnc  filter_limit.rng  filter_limit.xsd  filter_load_balance.rnc  filter_load_balance.rng  filter_load_balance.xsd  filter_log.rnc  filter_log.rng  filter_log.xsd  filter_multi.rnc  filter_multi.rng  filter_multi.xsd  (+31 more)
xml/xslt/: MARC21slim2DC.xsl  MARC21slim2MADS.xsl  MARC21slim2SRWDC.xsl  Makefile.am  explain2cqlpqftxt.xsl  pz22usi.xsl
